--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.PicTwin" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.PicTwin" parent="Theme.Material3.DayNight">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -12,5 +12,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:fontFamily">@font/lato_regular</item>
+    </style>
+    //toolbar theme
+    <style name="Theme.PicTwin.Toolbar" parent="Widget.Material3.Toolbar">
+        <item name="android:background">@color/purple_700</item>
+        <item name="titleTextColor">@color/teal_200</item>
+        <item name="subtitleTextColor">@color/teal_700</item>
     </style>
 </resources>
