--- a/app/src/main/res/layout/row_twin.xml
+++ b/app/src/main/res/layout/row_twin.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
     android:minHeight="?attr/minTouchTargetSize"
     android:orientation="horizontal">
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/rt_tv_mine"
         android:layout_width="match_parent"
@@ -18,4 +19,5 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/pic_yours"/>
+
 </androidx.appcompat.widget.LinearLayoutCompat>
